<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ItemActivity">

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="monospace"
        android:hint="Item Name"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingTop="24dp"
        android:singleLine="true"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/current_expiration_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:paddingTop="24dp"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="24dp">

        <Button
            android:id="@+id/set_expiration_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="monospace"
            android:text="Set Exp Date"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="24sp" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="monospace"
            android:text="done"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>